Module2/stm32_mcu/.metadata/.plugins/org.eclipse.cdt.ui/Blinky2.build.log
17:06:02 **** Incremental Build of configuration Debug for project Blinky2 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'delay':
../Core/Src/main.c:26:9: warning: unused variable 'i' [-Wunused-variable]
   26 |     int i;
      |         ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:139:1: error: expected identifier or '(' before '}' token
  139 | }
      | ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

17:06:02 Build Failed. 2 errors, 1 warnings. (took 165ms)

